refactor(test): refactor the tests to fix the PMD errors